update workflow file

--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -11,6 +11,13 @@ jobs:
     steps:
       - name: Install CMake
         run: sudo apt-get -y install cmake
+      - name: Install Unix Makefiles
+        run: sudo apt-get -y install make
+      
       - run: which cmake
       - run: cmake --version
+      - run: which make
+      - run: make --version
+      - run: which gcc
+      - run: which g++
       
