--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -11,9 +11,18 @@ jobs:
     steps:
       - name: Install CMake
         run: sudo apt-get -y install cmake
+      
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - run: pwd
+      - name: Make and move to build folder 
+        run: mkdir build && cd build
+
+      - name: Create makefile
+        run: cmake -G "Unix Makefiles" ..
+
+      - name: Build project
+        run: cmake --build .
+
       - run: ls
       
