update workflow file

--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -22,6 +22,8 @@ jobs:
 
       - run: cd build && pwd
 
+      - run: cd pwd
+
       # - name: Create makefile
       #   run: cmake -G "Unix Makefiles" ..
 
